Fix: Stack Overflow badge not scaling on Firefox.

--- a/_stylesheets/components/_badges.scss
+++ b/_stylesheets/components/_badges.scss
@@ -1,3 +1,4 @@
 .badges {
   text-align: right;
+  min-width: 0; // Allow image scaling on Firefox.
 }
